@@ -48,6 +48,7 @@ void suggest_nmi_watchdog(void);
 void suggest_hpet(void);
 void suggest_ac97_powersave(void);
 void suggest_wireless_powersave(void);
+void suggest_ondemand_governer(void);
 
 
 
